--- a/public/index.html
+++ b/public/index.html
@@ -5,238 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="manifest" href="/manifest.json">  
-  <style>
-   
-  body {
-    padding: 50px;
-    display: flex;
-    justify-content: center;
-    background-color: #00507f;
-    color: rgba(255, 255, 255, 0.95);
-    font-size: 15px;
-    line-height: 28px;
-    letter-spacing: 1px;
-  }
-  /* 複寫區 */
-  ul {
-    padding: 0;
-    list-style: none;
-  }
-  h2 {
-    margin: 0;
-    margin-bottom: 25px;
-    font-weight: 400;
-  }
-  h2::after {
-    content: " ";
-    display: inline-block;
-    width: 28px;
-    height: 8px;
-    background-color: #ff68de;
-    margin-left: 10px;
-  }
-  h4 {
-    margin: 0;
-    margin-bottom: 40px;
-    opacity: 0.8;
-    font-weight: 400;
-  }
-  a {
-    text-decoration: none;
-    color: white;
-  }
-  hr {
-    border: none;
-    border-bottom: solid 4px #ff68de;
-    width: 80%;
-    margin-left: 0;
-  }
-  .resume {
-    display: flex;
-    max-width: 950px;
-    border: solid 8px white;
-    padding: 50px;
-    position: relative;
-  }
-  .left {
-    padding-right: 50px;
-    border-right: solid 1px #ff68de;
-  }
-  .left {
-    flex: 5;
-  }
-  .right {
-    flex: 7;
-  }
-  .right {
-    padding-left: 50px;
-    padding-top: 150px;
-  }
-   /* .left, */
-  /* .right { */
-    /*   padding: 15px; */
-  /* }  */
-  .decoration {
-    width: 300px;
-    height: 140px;
-    background: linear-gradient(135deg, #ff68de, #68ccff);
-    border-radius: 70px 0px 0px 70px;
-    position: absolute;
-    right: 0;
-    top: 50px;
-  }
-  .listExperience > li {
-    display: flex;
-    margin-bottom: 10px;
-  }
-  .listExperience > li:nth-child(1) ul {
-    border-color: #ff68de;
-  }
-  .listExperience > li:nth-child(2) ul {
-    border-color: #ff7ce0;
-  }
-  .listExperience > li:nth-child(3) ul {
-    border-color: #ffa8e9;
-  }
-  .listExperience > li:nth-child(4) ul {
-    border-color: #ffddf6;
-  }
-  .listExperience li ul {
-    padding-left: 10px;
-    margin-left: 10px;
-    border-left: solid 1px white;
-  }
-  
-  /* list Skill */
-  .listSkill {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .listSkill li {
-    width: 25%;
-    padding: 5px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-  
-  .circle {
-    width: 50px;
-    height: 50px;
-    background-color: #00507f;
-    border-radius: 50%;
-    position: relative;
-    overflow: hidden;
-    background-color: rgba(255, 104, 222, 0.4);
-  }
-  .circle::after {
-    content: " ";
-    display: block;
-    background-color: #00507f;
-    width: calc(100% - 20px);
-    height: calc(100% - 20px);
-    border-radius: 50%;
-    position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-  }
-  .p90,
-  .p180,
-  .p270,
-  .p360 {
-    width: 50%;
-    height: 50%;
-    position: absolute;
-    left: 50%;
-    top: 0;
-    background-color: #ff68de;
-  }
-  .p180 {
-    top: 50%;
-  }
-  .p270 {
-    left: 0;
-    top: 50%;
-  }
-  .p360 {
-    left: 0;
-    top: 0;
-  }
-  /* list program */
-  .listProgram .bar {
-    width: 150px;
-    height: 10px;
-    border: solid 2px #ff68de;
-    border-radius: 5px;
-  }
-  .listProgram li {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 10px;
-  }
-  .value {
-    width: 60%;
-    height: 100%;
-    background-color: #ff68de;
-  }
-  .value.p10 {
-    width: 10%;
-  }
-  .value.p20 {
-    width: 20%;
-  }
-  .value.p30 {
-    width: 30%;
-  }
-  .value.p40 {
-    width: 40%;
-  }
-  .value.p50 {
-    width: 50%;
-  }
-  .value.p60 {
-    width: 60%;
-  }
-  .value.p70 {
-    width: 70%;
-  }
-  .value.p80 {
-    width: 80%;
-  }
-  .value.p90 {
-    width: 90%;
-  }
-  .value.p100 {
-    width: 100%;
-  }
-  .btn {
-    border: solid 3px #ff68de;
-    padding: 5px 20px;
-    margin-right: 10px;
-  }
-  .fill {
-    background-color: #ff68de;
-  }
-  @media screen and (min-width:375px) and (max-width: 700px){
-    .decoration {
-    width: 150px;
-    height: 70px;
-    background: linear-gradient(135deg, #68ff68, #065a84);
-    border-radius: 70px 0px 0px 70px;
-    position: absolute;
-    right: 0;
-    top: 50px;
-  }
-  }
-    </style>
+ 
       <title>Document</title>
 </head>
-<body>
+<body id="root">
   <!-- <script>
     if ('serviceWorker' in navigator) {
       // Register a service worker hosted at the root of the
